--- a/7-Properties/7-Properties/7-Properties.csproj
+++ b/7-Properties/7-Properties/7-Properties.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>_01_Construtores</RootNamespace>
+    <RootNamespace>_7_Properties</RootNamespace>
   </PropertyGroup>
 
 </Project>
